<resources>
    <string name="app_name">MovingAverageApplication1</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="start_adding_stocks">Start adding stocks</string>
    <string name="you_don_t_follow_any_stocks_yet_n_click_the_button_below_to_add_stocks">You don\'t follow any stocks yet.\nClick the button below to add stocks</string>
    <string name="you_don_t_have_following_stock_yet_n_click_the_button_below_to_add_following_sets">You don\'t have following stocks yet.\nClick the button below to add following sets</string>
    <string name="success_remove">Successfully removed: %1$s</string>
    <string name="select_a_stock_you_want_to_follow">Select a stock you want to follow</string>
    <string name="okay">Okay</string>
    <string name="follow_this_stock">Follow this stock</string>
    <string name="follow_set">FollowSet</string>
    <string name="deletion_follow_set_title">Delete Follow Set</string>
    <string name="delete_follow_set_message">Are you sure you want to delete the follow set: %1$s?</string>
    <string name="follow_set_description">%1$d stocks</string>
    <string name="following_set_title">Following Set: %1$s</string>
    <string name="set_threshold_alert">Set threshold alert for follow set %1$s</string>
    <string name="alert_threshold_message">I want to be alerted when the stock price reaches this value</string>
    <string name="alert_threshold_reached">You will be alerted when the threshold reaches %1$s</string>
    <string name="alert_set_at">Alert set at %1$s</string>
    <string name="welcome_message">Welcome: %1$s!</string>
    <string name="available_stocks">Available stocks</string>
    <string name="menu_title">Menu</string>
    <string name="select_stocks_first">Please select stocks first before adding follow sets and alerts</string>
    <string name="add_following_sets">Here you can view and add follow sets from the stocks you follow</string>
    <string name="view_followed_stocks">Here you can view the stocks you follow</string>
    <string name="followed_stocks_title">Followed Stocks</string>
    <string name="deletion_stock_title">Delete Stock</string>
    <string name="delete_stock_message">Are you sure you want to delete the stock: %1$s?</string>
    <string name="successfully_removed">Successfully removed: %1$s</string>
    <string name="follow_set_name">Follow Set Name</string>
    <string name="enter_follow_set_name">Please enter a name for your new follow set</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="valid_name_prompt">Please enter a valid name</string>
    <string name="valid_number_prompt">Please enter a valid number</string>
    <string name="loading">Loading...</string>
    <string name="find_stocks_you_want_to_follow">Find stocks you want to follow</string>
    <string name="problem_fetching_prices">Problem fetching prices</string>
    <string name="add_stocks_to_continue">Add stocks to continue</string>
    <string name="error_loading_stocks">Error loading stocks</string>
    <string name="loading_stocks_progress">Loading stocks... Progress: %1$s%%</string>
    <string name="moving_average">Moving Average</string>
    <string name="ask_virtual_adviser">Ask Virtual Adviser</string>
    <string name="close">Close</string>
    <string name="content_description_add_stocks">Add Stocks</string>
    <string name="click_to_download_stocks">Click to download stocks</string>
    <string name="main_item_title">Main Item Title</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="question_title">Question Title</string>
    <string name="question_text">Question Text</string>
    <string name="please_sign_up_to_continue">Please sign up to continue</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="stock_image_description">Stock Image</string>
    <string name="stock_title_placeholder">Stock Title</string>
    <string name="stock_ticker_placeholder">Stock Ticker</string>
    <string name="stock_price_placeholder">Stock Price</string>
    <string name="default_user">User</string>
    <string name="success_response">Success</string>
    <string name="bad_request">Bad Request</string>
    <string name="wrong_credentials">Wrong Credentials</string>
    <string name="forbidden">Forbidden</string>
    <string name="not_found">Not Found</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="network_error">Network Error: %1$s</string>
    <string name="network_call_failed">Network call failed: %1$s</string>
    <string name="no_reply_found">No reply found</string>
    <string name="no_stocks_selected">No Stocks Selected</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout, %1$s?</string>
    <string name="logged_out_message">Goodbye %1$s, you have been logged out</string>
    <string name="empty_symbols_string">No symbols available</string>
    <string name="symbol_separator">, %1$s</string>
    <string name="ask_custom_question_about_stocks">Ask a custom question about stocks</string>
    <string name="write_question_here">Write your question here</string>
    <string name="linebreak_separator">\n</string>
    <string name="default_empty_question">No question provided</string>
    <string name="enter_valid_question">Please enter a valid question</string>
    <string name="currently_following">Currently Following</string>
    <string name="moving_averages_title">Moving Averages</string>
    <string name="ma_25_display">MA 25: %1$.2f</string>
    <string name="ma_50_display">MA 50: %1$.2f</string>
    <string name="ma_150_display">MA 150: %1$.2f</string>
    <string name="ma_200_display">MA 200: %1$.2f</string>
    <string name="ma_full_display">%1$s\n%2$s\n%3$s\n%4$s\n%5$s</string>
    <string name="na">N/A</string>
    <string name="live_price">Live Price: %1$s</string>
    <string name="follow_to_get_updates">Follow to get updates</string>
    <string name="stock_added_to_selected">Stock %1$s added to your selection</string>
    <string name="stock_lowercase">stock</string>
    <string name="problem_fetching_moving_averages">Problem fetching moving averages</string>
    <string name="username_password_empty">Username and password cannot be empty</string>
    <string name="user_default">Default User</string>
    <string name="confirmation_password_not_identical">Passwords do not match</string>
    <string name="unknown_user">Unknown user</string>
    <string name="error_try_again">An error occurred. Please try again</string>
    <string name="ask_custom_question">Ask a custom question</string>
    <string name="error_prefix">Error: %1$s</string>
    <string name="please_wait_completion">Please wait for the operation to complete</string>
    <string name="error_colon">Error: %1$s</string>
    <string name="all_stocks_fetched">All stocks have been fetched</string>
    <string name="no_stocks_available">No stocks available</string>
    <string name="one_stock_available">1 stock available</string>
    <string name="stocks_available">%1$d stocks available</string>
    <string name="select_stocks_for_followset">Select some stocks you want to add to a follow set</string>
    <string name="return_text">Return</string>
    <string name="back">Back</string>
    <string name="set_alert_followset">Set an alert for this followset</string>
    <string name="ask_ai_advisor_followset">Ask AI advisor about this followset</string>
    <string name="write_note_followset">Write a note about this followset</string>
    <string name="following_sets_title">Following Sets</string>
    <string name="ai_responsibility_warning">Please note: This is not financial advice.</string>
    <string name="ai_company_global_information">Provide global information about the company</string>
    <string name="ai_what_about_company">What about this company?</string>
    <string name="ai_should_invest_stock">Should I invest in this stock?</string>
    <string name="ai_stock_history">Provide stock history</string>
    <string name="ai_what_is_history">What is the stock\'s history?</string>
    <string name="ai_custom_question">Custom Question</string>
    <string name="ai_ask_own_question">Ask your own question</string>
    <string name="ai_followset_global_advising">Provide global advising for the follow set</string>
    <string name="ai_good_idea_investing">Is it a good idea to invest in this follow set?</string>
    <string name="ai_followset_potential_replacement">Suggest potential replacements for the follow set</string>
    <string name="ai_should_replace_stocks">Should I replace stocks in this follow set?</string>
    <string name="ai_followset_history">Provide history of the follow set</string>
    <string name="ai_histories_of_stocks">What are the histories of the stocks in this follow set?</string>
    <string name="followset_display_name">Follow Set Display Name</string>
    <string name="stock_display_name">Stock Display Name</string>
    <string name="this_object">This Object</string>
    <string name="enter_description_title">Enter Description</string>
    <string name="enter_description_message">Please enter a description</string>
    <string name="description_cannot_be_empty">Description cannot be empty</string>
    <string name="enter_valid_description">Please enter a valid description</string>
    <string name="followset_name_title">Follow Set Name</string>
    <string name="enter_followset_name_message">Please enter a name for the follow set</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="about_followsets_title">About Follow Sets</string>
    <string name="about_followsets_message">Follow sets allow you to group stocks and track them together</string>
    <string name="notifications_permission_title">Notifications Permission</string>
    <string name="notifications_permission_message">This app needs permission to send you notifications about stock alerts</string>
    <string name="previously_followed_stocks">Previously Followed Stocks</string>
    <string name="retrieved_stocks_message">Retrieved stocks from your account</string>
    <string name="some">some</string>
    <string name="empty_string"></string>
    <string name="stocks_plural_suffix">stocks</string>
    <string name="followset_comments_title">Follow Set Comments</string>
    <string name="i_understand">I Understand</string>
    <string name="ask">Ask</string>
    <string name="default_ok">OK</string>
    <string name="default_cancel">Cancel</string>
    <string name="default_invalid_input">Invalid Input</string>
    <string name="default_input_message">Please enter input</string>
    <string name="default_close">Close</string>
    <string name="default_yes">Yes</string>
    <string name="default_no">No</string>
    <string name="placeholder_uri">placeholder_uri</string>
    <string name="ask_ai_advisor">Ask AI Advisor:</string>
    <string name="alert_set_under">Alert set under %1$s</string>
    <string name="no_alert_set">No alert set</string>
    <string name="permission_denied">Permission denied</string>
    <string name="default_empty_user_comments">No comments</string>
    <string name="ai_warning_full">Warning! This is an AI-based answered text and we are not responsible for any loss or damage caused by the use of this information. Please do your own research before making any investment decisions.</string>
</resources>