<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LoginFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/login"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Sign Up to Continue"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        >
    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:id="@+id/nameInput"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:id="@+id/passwordInput"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>


    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_password_again"
        android:id="@+id/passwordConfirmationInput"
        android:layout_marginTop="20dp"
        android:textSize="18sp"/>


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:backgroundTint="#F810AEC3"
        android:text="@string/sign_up"
        android:textColor="#F8074750"
        android:textSize="16sp"

        />

    <ProgressBar
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:id="@+id/progressBar"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="#F8074750"
        android:id="@+id/loadingText"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/already_have_an_account"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:id="@+id/signUpText"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>