<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="50dp"
    android:background="#F810AEC3"
    tools:context=".ui.fragment.DetailsStockFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/cardview_dark_background">

            <TextView
                android:id="@+id/stock_title"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>



            <TextView
                android:id="@+id/stock_symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />





            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/ask_ai_advisor"
                android:id="@+id/ask_ai_text"
                android:textColor="@android:color/holo_purple"
                android:layout_marginTop="8dp"/>


            <WebView
                android:id="@+id/answerHtml"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:padding="20dp"
                android:visibility="gone"
                android:background="@android:color/transparent" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/question_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:visibility="visible"/>



            <ImageView
                android:id="@+id/item_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/warning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/ai_warning_full"
                android:textColor="@android:color/holo_red_light"
                android:textStyle="bold"
                android:background="@color/cardview_dark_background"
                android:visibility="visible" />

            <Button
                android:id="@+id/return_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/back"
                android:backgroundTint="#F810AEC3" />



        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>